--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,3 +1,4 @@
+<%@ page import="com.epam.finaltack.ivanvertylo.Constant" %>
 <%@ page contentType="text/html; charset=UTF-8" %>
 <%@ include file="/WEB-INF/jspf/directive/taglib.jspf" %>
 
@@ -9,6 +10,12 @@
             </div>
             <div class="col-md-8 nav_bar_btn">
                 <button type="button" class="btn btn-primary">Тесты</button>
+                <c:if test="${role == 'admin'}">
+                    <form style="display: inline-block; margin: 0;" method="post" action="controller">
+                        <input type="hidden" name="command" value="admin">
+                        <button type="submit" class="btn btn-outline-danger">Admin</button>
+                    </form>
+                </c:if>
                 <c:choose>
                     <c:when test="${role != null}">
                         <button type="button" class="btn btn-success"><%=session.getAttribute("username")%>
@@ -108,6 +115,8 @@
             }
 
         })
+        <c:set var="loginError" value="<%=request.getParameter(Constant.ERROR_LOGIN)%>"/>
+        <c:set var="registerError" value="<%=request.getParameter(Constant.ERROR_REGISTER)%>"/>
         <c:choose>
         <c:when test="${loginError == true}">
         $('.toastLogin').toast({autohide: false});
