--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -32,3 +32,8 @@
     right: 0;
     margin: 10px;
 }
+.scroll-block {overflow-x: scroll;}
+.scroll-block::-webkit-scrollbar-track {border-radius: 4px;}
+.scroll-block::-webkit-scrollbar {width: 6px;}
+.scroll-block::-webkit-scrollbar-thumb {border-radius: 4px;background: #f0f2f5;}
+.scroll-block:hover::-webkit-scrollbar-thumb {background: #6a7d9b;}
