--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -9,7 +9,7 @@
                 <img class="nav_bar_logo" src="img/QuickTest.png" alt="Logo">
             </div>
             <div class="col-md-8 nav_bar_btn">
-                <button type="button" class="btn btn-primary">Тесты</button>
+                <a href="${pageContext.request.contextPath}/main" type="button" class="btn btn-primary">Тесты</a>
                 <c:if test="${role == 'admin'}">
                     <form style="display: inline-block; margin: 0;" method="post" action="controller">
                         <input type="hidden" name="command" value="admin">
@@ -51,7 +51,7 @@
 
                         <label for="login">Login</label>
 
-                        <input class="form-control" type="text" required="required" pattern="[A-Za-z0-9]+" name="login" id="login"/>
+                        <input class="form-control" type="text" required="required" pattern="[A-Za-z0-9]{4,30}" name="login" id="login"/>
 
                         <label style="margin-top: 10px;" for="password">Password</label>
 
@@ -103,7 +103,7 @@
             $("#dblPassword").toggle(this.checked);
         })
         $("#check").click(function () {
-            if ($("#dblPassword").val() === $("#password").val()) {
+            if ($("#password").val().trim() !== "" && $("#dblPassword").val() === $("#password").val()) {
                 $("#check").hide();
                 $("#enter").show();
                 $("#password").attr('readonly', true);
