--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -6,10 +6,6 @@
 <fmt:setBundle basename="resources"/>
 
 <header>
-    <div style="position: absolute; top: 0; right: 0">
-        <a href="controller?command=changeLocale&locale=ru">RU</a>
-        <a href="controller?command=changeLocale&locale=en">EN</a>
-    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -25,7 +21,7 @@
                 </c:if>
                 <c:choose>
                     <c:when test="${role != null}">
-                        <a href="${pageContext.request.contextPath}/profile?user=${login}" type="button" class="btn btn-success"><%=session.getAttribute("username")%>
+                        <a style="margin-left: 10px" href="${pageContext.request.contextPath}/profile?user=${login}" type="button" class="btn btn-success"><%=session.getAttribute("username")%>
                         </a>
                         <form style="display: inline-block; margin: 0;" method="post" action="controller">
                             <input type="hidden" name="command" value="logout">
